# noc_agent

./: .gitignore  Dockerfile  LICENSE.txt  README.md  Setup.cfg  alembic.ini  config.yaml  dev-requirements.txt  noc_agent.db  noc_agent.spec  pyproject.toml  pytest.ini  requirements.txt  setup.py  train_anomaly.py  user_management.py
.github/workflows/: ci.yml  docker-image.yml
agent/: agent.py  anomaly.py  api.py  auth.py  capture.py  config.py  db.py  scanner.py
agent/noc_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
noc_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_api.py  test_capture.py  test_config.py  test_scanner.py  test_userdb.py
